# dotfiles

./: .coverage  .gitignore  .pylintrc  Cargo.toml  README.md  ROADMAP.md  TODO.md  commands-to-implement.txt  configuration.toml  format_files.sh  install_all.sh  packages.json  pre_installer.sh  run_tests.sh  scrumboard.md  setup  setup.cfg  setup.py  setup_installer  test.py
conf/: inputrc  nvim.lua
configuration/: bashrc  com_emu.cmd  config.toml  dotfiles.toml  init.vim  packages.toml  terminator
dev/: gsettings_finder.py
docs/designs/: dotfiles_design.puml  ui_design.drawio
docs/designs_old/: dotfiles_design.puml
dotfiles/: dotfiles.sh
dotfiles.egg-info/: PKG-INFO  SOURCES.txt
dotfiles/src/: run.py
etc/: .bashrc  .inputrc  bashrc  dotfile_paths.json  gsettings.json  gsettings.py  init.vim  packages.json  terminator
lib/: config_file_installer.py  config_installer.py  package_info.py  packages_installer.py
src/: config_manager.rs  dotfiles_symlinking.py  gsettings.py  installer.py  io_operations.rs  lib.rs  main.py  main.rs  main_window.py  neovim_plugin_handler.py  packages_validator.py  run.py
src.egg-info/: PKG-INFO  SOURCES.txt
src/application/: application.py  application_widget.py  factory.py  main_window.py
src/business_layer/: id_generator.py
src/configuration_loader/: configuration_loader.py
src/data_layer/: accessor.py  dotfile_accessor.py  package_accessor.py
src/data_models/: accessor_result_message.py  configuration_path.py  dotfile.py  installation_object.py  item.py  manager.py  manager_name.py  object.py  package.py  (+9 more)
(+192 files in other folders)
