
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[metadata]
name = dotfiles
version = 0.4.0
description = 'My dotfiles, installation scripts, and packages'
url = 'https://github.com/LuukHenk/dotfiles'
author = 'Luuk Henk'
license = 'MIT'

[aliases]
test=pytest
